[package]
name = "halo2-fib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example1"
path = "src/example1.rs"
required-features = ["dev-graph"]

[[bin]]
name = "graph_main"
path = "src/graph_main.rs"
required-features = ["dev-graph"]

[[bin]]
name = "example2"
path = "src/example2.rs"
test = true

[lib]
name = "gadgets_lib"
path = "src/lib.rs"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters", "tabbycat"]

[dependencies]
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "a898d65ae3ad3d41987666f6a03cfc15edae01c4"}
# Developer tooling dependencies
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
bus-mapping = {path = "../bus-mapping" }
eth-types = { path = "../eth-types" }
keccak256 = { path = "../keccak256" }
mock = { path = "../mock" }
serde_json = "1.0.92"
